# agentic-signal-triage-notify

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  prd-wake-gates-prefilters-debounce.md  writing-a-sensor.md
scripts/: bump_version.py
signal-triage-notify/.well-known/skills/: index.json
skills/signal-notify/: SKILL.md
skills/signal-notify/scripts/: _sensorlib.py  bootstrap_oauth.py  gcal_write.py  github_sensor.py  github_sensor.sh  gmail_sensor.py  ics_sensor.py  ics_sensor.sh  install-sensors.sh  notify_prefilter.ps1  notify_prefilter.py  notify_prefilter.sh  pyproject.toml  registry.yaml  setup.py  setup.sh  signal_ledger.py  triage_prefilter.ps1  triage_prefilter.py  triage_prefilter.sh  weather_sensor.py  weather_sensor.sh
skills/signal-notify/scripts/tests/: conftest.py  test_debounce.py  test_prefilter_pipeline.py  test_source_id.py
skills/signal-triage/: SKILL.md
skills/signal-triage/references/: manual-workflows.md  pitfalls.md
